--- a/TestProject002/demo/frontend/reactt002/src/components/cssModule/Layout.module.css
+++ b/TestProject002/demo/frontend/reactt002/src/components/cssModule/Layout.module.css
@@ -1,3 +1,3 @@
-/* components / Layout / Header / Layout.module.css */
+/* components / cssModule / Layout.module.css */
 
 .layout { padding-top : 80px; }
