--- a/TestProject002/demo/frontend/reactt002/src/components/cssModule/Footer.module.css
+++ b/TestProject002/demo/frontend/reactt002/src/components/cssModule/Footer.module.css
@@ -1,5 +1,6 @@
 /* components / cssModule / Footer.module.css */
 
-.footer {left: 0; top:0; width:100%; height:80px; background-color: #dde0ea;}
+.footer {left: 0; top:0; width:100%; height:25px; background-color: #9f7d4a; font-family: 'Black Han Sans', sans-serif; font-size:13px;}
+
 .contents { display:flex; width:96%; max-width: 1100px; height: 100%; margin:0 auto; align-items: center; justify-content: space-between;}
-.navigation { ul {display: flex; list-style: none; li + li {margin-left:30px;}}}
+.inner { display:contents;}
