--- a/TestProject002/demo/frontend/reactt002/src/components/cssModule/Main.module.css
+++ b/TestProject002/demo/frontend/reactt002/src/components/cssModule/Main.module.css
@@ -1,3 +1,3 @@
 /* components / cssModule / Main.module.css */
 
-.main {left: 0; top:0; width:100%; height:80px; background-color: white;}
+.main {left: 0; top:0; width:100%; height:auto; background-color: white; padding-bottom:0px;}
