--- a/TestProject002/demo/frontend/reactt002/src/components/cssModule/default/Header.module.css
+++ b/TestProject002/demo/frontend/reactt002/src/components/cssModule/default/Header.module.css
@@ -5,7 +5,7 @@
 .contents { display:flex; width:96%; min-width: 1100px;  height: 100%; margin:0 auto; align-items: center; justify-content: space-between;}
 
 .con_Logo { display:inline-block; width: 300px;}
-.con_Logo_img { height: 30px; width: 30px;}
+.con_Logo_img { height: 30px; width: 30px; cursor: pointer;}
 
 .con_Center { display:inline-block;  width: 800px; font-size:35px;}
 
