레시피 저장페이지 유효성 검사 및 화면 컨트롤
레시피 저장페이지 유효성 검사 및 화면 컨트롤

--- a/TestProject002/demo/frontend/reactt002/src/components/cssModule/recipe/RecipeSave.module.css
+++ b/TestProject002/demo/frontend/reactt002/src/components/cssModule/recipe/RecipeSave.module.css
@@ -99,3 +99,5 @@
     /* background-color: #fff8de;     */
     margin-bottom: 100px;
     border-radius: 20px; height: auto;  padding-top: 5px; padding-bottom: 5px; }
+
+.recipe_save_div_display_none {display: none;}    
